gitops/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
  namespace: changeme
  labels:
    app: payment-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-app
  template:
    metadata:
      labels:
        app: payment-app
    spec:
      containers:
        - name: payments
          image: image-registry.openshift-image-registry.svc:5000/pre-production/payment-application@sha256:7d850db9a4120dfb4f161fbfa3016970ea094aed0d8df873794d6a09d1e99f2e
          ports:
            - containerPort: 8080
