gitops/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: changeme
spec:
  selector:
    app: payment-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
