gitops/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: payment-route
  namespace: changeme
spec:
  path: /welcome
  to:
    kind: Service
    name: payment-service
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
